--- a/style.css
+++ b/style.css
@@ -10,11 +10,16 @@ body {
     border: 1px solid #ccc;
     padding: 0.5in;
     box-sizing: border-box;
+    background-color: beige;
 }
 
 .header {
     text-align: center;
     margin-bottom: 0.5in;
+    
+}
+h{
+    background: gainsboro;
 }
 
 .patient-info, .doctor-info, .payment-info {
