control on print

--- a/style.css
+++ b/style.css
@@ -75,6 +75,9 @@ h2,h3{
   #prbtn:hover{
     background-color: #077a50;
   }
+  #prbtn{
+    display: none;
+  }
   #a{
     
     height: 3.75rem;
