--- a/style.css
+++ b/style.css
@@ -86,3 +86,6 @@ h2,h3{
     background-repeat: no-repeat;
     background-position: center;
 }
+input[type="text"]:focus {
+    border: 2px solid #04AA6D; /* Change to your desired color */
+}
