--- a/style.css
+++ b/style.css
@@ -86,6 +86,9 @@ h2,h3{
     background-repeat: no-repeat;
     background-position: center;
 }
+input[type="text"] {
+    border: 2px solid transparent;
+}
 input[type="text"]:focus {
     border: 2px solid #04AA6D; /* Change to your desired color */
 }
