--- a/style.css
+++ b/style.css
@@ -90,3 +90,10 @@ input[type="text"] {
 input[type="text"]:focus {
     border: 2px solid #04AA6D; /* Change to your desired color */
 }
+#logo{
+position: relative;
+height: 50px;
+width: 170px;
+opacity: 41%;
+z-index: 0;
+}
